.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Persian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......P.. [ZBX-7825] fixed saving of the history data in sequential time order on proxy side (Sasha)
...G...... [ZBX-7856] added workaround for Windows _wstat64() not working with symlinks (wiper)
..F....... [ZBX-8030] fixed {HOSTNAME} macro resolving (Eduard)
...G....S. [ZBX-7046] fixed get_ip_by_socket returning an empty string for IPv4 addresses when Zabbix is compiled with IPv6 support (Juris)
..F....... [ZBX-7966] fixed possibility to copy a templated graph (Ivo)
..F....... [ZBX-7930] improved execution time in Maintenance page (Ivo)
..F.....S. [ZBX-7872] removed discovery item prototype from calculation of required performace (NVPS) (igors)
..F.....S. [ZBX-5778] removed counting items in queue if host is in maintenance with no data collection (igors)
A......... [ZBX-6151] fixed graph prototype and trigger prototype validation so item prototypes are no longer allowed from multiple discovery rules and fixed filter by flags not overriding in item.get method (Ivo)
........S. [ZBX-5804] added overflow/wrapping detection to calculated items (Juris)
........S. [ZBX-7659] fixed handling of hosts without any interfaces (Juris)
....IJ.... [ZBX-5379] added stale PID file detection for Java gateway (asaveljevs)
....IJ.... [ZBX-5558] fixed Java gateway error messages not being shown in the console on startup (asaveljevs)
...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)
...G...PS. [ZBX-6729] faster processing of log files by agent on Microsoft Windows (Andris)
...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
...G...... [ZBX-7853] changed log level from warning to information when listener, active checks and collector processes start (igors)