@@ -238,6 +238,9 @@ DBUser=root
 ### Option: HousekeepingFrequency
 #	How often Zabbix will perform housekeeping procedure (in hours).
 #	Housekeeping is removing unnecessary information from history, alert, and alarms tables.
+#	To prevent Housekeeper from being overloaded (for example, when history and trend periods
+#	are greatly reduced), no more than 4xHousekeepingFrequency hours of outdated history are
+#	deleted in one housekeeping cycle, for each item.
 #
 # Mandatory: no
 # Range: 1-24
